--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,7 @@ deploy:
     - kubectl apply -f deployment.yaml
   only:
     - merge_requests
+    #- web
 
 deploy-for-schedule:
   stage: deploy
