--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.security.user.name=user
 spring.security.user.password=password
 spring.session.store-type=jdbc
 spring.main.allow-bean-definition-overriding=true
+
+# catalogue
+catalogue.url=http://localhost:3000
