--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,7 +76,7 @@ deploy:
   image: dtzar/helm-kubectl:3.8.2
   before_script:
     - apk add --update py-pip
-    - pip install awscli --break-system-packages
+    - pip install awscli
   script:
     - |
       if [[ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]]; then
