--- a/deployment.yaml
+++ b/deployment.yaml
@@ -57,6 +57,8 @@ spec:
           value: "true"
         - name: NEW_RELIC_TRANSACTION_TRACER_EXPLAIN_THRESHOLD
           value: "0.3"
+        - name: NEW_RELIC_ENABLE_AUTO_TRANSACTION_NAMING
+          value: "false"
         - name: JVM_OPTS
           value: "-Dcatalogue.url=http://catalogue-web -Dspring.datasource.url=jdbc:mysql://front-db:3306/db -Dspring.datasource.username=frontservice -Dspring.datasource.password=frontservice_password"
         - name: RAILS_LOG_TO_STDOUT
