--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,7 @@ docker-build-for-tag:
   script:
     - |
       tag=$(echo $CI_COMMIT_TAG | sed "s/\./-/g")
+    - echo "docker build . --network host --tag public.ecr.aws/g7c8o4c7/front-service:${tag} --build-arg COMMIT_SHA=${CI_COMMIT_SHA} --build-arg RELEASE_TAG=${CI_COMMIT_TAG}"
     - docker build . --network host --tag public.ecr.aws/g7c8o4c7/front-service:${tag} --build-arg COMMIT_SHA=${CI_COMMIT_SHA} --build-arg RELEASE_TAG=${CI_COMMIT_TAG}
     - docker push public.ecr.aws/g7c8o4c7/front-service:${tag}
     - docker run --rm -d --name work_${tag} public.ecr.aws/g7c8o4c7/front-service:${tag}
