--- a/src/main/js/react/front/package.json
+++ b/src/main/js/react/front/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-dev": "REACT_APP_DEV_URL=http://localhost:8080 react-scripts start",
     "build": "NODE_ENV=development react-scripts build; bash -x ./deploy.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
