--- a/deployment.yaml
+++ b/deployment.yaml
@@ -59,6 +59,8 @@ spec:
           value: "0.3"
         - name: NEW_RELIC_ENABLE_AUTO_TRANSACTION_NAMING
           value: "false"
+        - name: NEW_RELIC_JFR_ENABLED
+          value: "true"
         - name: JVM_OPTS
           value: "-Dcatalogue.url=http://catalogue-web -Dspring.datasource.url=jdbc:mysql://front-db:3306/db -Dspring.datasource.username=frontservice -Dspring.datasource.password=frontservice_password"
         - name: RAILS_LOG_TO_STDOUT
