set secure for cookie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.same-site=None
 
 #spring.devtools.restart.enabled=true
 spring.web.resources.static-locations[0]=file:src/main/resources/static/
@@ -24,6 +24,10 @@ spring.security.user.name=user
 spring.security.user.password=password
 spring.session.store-type=jdbc
 spring.main.allow-bean-definition-overriding=true
+spring.session.timeout=30m
+server.servlet.session.timeout=30m
 
 # catalogue
-catalogue.url=http://localhost:3000
+catalogue.url=https://catalogue.demo.learn.nrkk.technology
+
+server.servlet.session.cookie.secure=true
