--- a/deployment.yaml
+++ b/deployment.yaml
@@ -53,6 +53,8 @@ spec:
           value: YOUR_NR_LICENSE_KEY
         - name: NEW_RELIC_DISTRIBUTED_TRACING_ENABLED
           value: "true"
+        - name: NEW_RELIC_INFINITE_TRACING_TRACE_OBSERVER_HOST
+          value: YOUR_TRACE_OBSERVER_HOST
         - name: NEW_RELIC_CODE_LEVEL_METRICS_ENABLED
           value: "true"
         - name: NEW_RELIC_TRANSACTION_TRACER_EXPLAIN_THRESHOLD
