--- a/deployment.yaml
+++ b/deployment.yaml
@@ -74,7 +74,7 @@ spec:
         livenessProbe:
           failureThreshold: 3
           httpGet:
-            path: /actuator/health
+            path: /health
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 180
@@ -88,7 +88,7 @@ spec:
         readinessProbe:
           failureThreshold: 3
           httpGet:
-            path: /actuator/health
+            path: /health
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 180
