--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,11 @@ server.servlet.session.timeout=30m
 catalogue.url=https://catalogue.demo.learn.nrkk.technology
 
 server.servlet.session.cookie.secure=true
+
+# log
+server.tomcat.accesslog.enabled=true
+server.tomcat.basedir=/dev
+server.tomcat.accesslog.directory=stdout
+server.tomcat.accesslog.suffix=
+server.tomcat.accesslog.prefix=
+server.tomcat.accesslog.file-date-format=
