--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,12 @@ spring.main.allow-bean-definition-overriding=true
 spring.session.timeout=30m
 server.servlet.session.timeout=30m
 
+aws.region=ap-northeast-1
+aws.bedrock.titan-embedding-model-id=amazon.titan-embed-text-v2:0
+qdrant.host=localhost
+qdrant.port=6334
+qdrant.collection-name=socks-products
+
 # catalogue
 catalogue.url=https://catalogue.demo.learn.nrkk.technology
 
