--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,3 +1,14 @@
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: front-service-secrets
+  namespace: catalogue
+type: Opaque
+stringData:
+  AWS_ACCESS_KEY_ID: "YOUR_AWS_ACCESS_KEY_ID"
+  AWS_SECRET_ACCESS_KEY: "YOUR_AWS_SECRET_ACCESS_KEY"
+---
 apiVersion: v1
 kind: Service
 metadata:
