--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,10 @@ spring.main.allow-bean-definition-overriding=true
 spring.session.timeout=30m
 server.servlet.session.timeout=30m
 
+
 aws.region=ap-northeast-1
-aws.bedrock.titan-embedding-model-id=amazon.titan-embed-text-v2:0
+aws.bedrock.embedding-model-id=amazon.titan-embed-text-v2:0
+aws.bedrock.model-id=amazon.nova-lite-v1:0
 qdrant.host=localhost
 qdrant.port=6334
 qdrant.collection-name=socks-products
