--- a/deployment.yaml
+++ b/deployment.yaml
@@ -74,6 +74,8 @@ spec:
           value: "false"
         - name: NEW_RELIC_JFR_ENABLED
           value: "true"
+        - name: QDRANT_HOST
+          value: qdrant.qdrant
         - name: JVM_OPTS
           value: "-Dcatalogue.url=http://catalogue-web -Dspring.datasource.url=jdbc:mysql://front-db:3306/db -Dspring.datasource.username=frontservice -Dspring.datasource.password=frontservice_password"
         - name: RAILS_LOG_TO_STDOUT
