--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,8 +90,8 @@ deploy:
     - sed -i "s/front-service:latest/front-service:${tag}/g" deployment.yaml
     - sed -i "s/YOUR_NR_LICENSE_KEY/${NEW_RELIC_LICENSE_KEY}/g" deployment.yaml
     - sed -i "s/YOUR_TRACE_OBSERVER_HOST/${NEW_RELIC_INFINITE_TRACING_TRACE_OBSERVER_HOST}/g" deployment.yaml
-    - sed -ie "s/YOUR_AWS_ACCESS_KEY_ID/${APP_AWS_ACCESS_KEY_ID}/g" deployment.yaml
-    - sed -ie "s|YOUR_AWS_SECRET_ACCESS_KEY|${APP_AWS_SECRET_ACCESS_KEY}|g" deployment.yaml
+    - sed -ie "s/YOUR_AWS_ACCESS_KEY_ID/${AWS_ACCESS_KEY_ID}/g" deployment.yaml
+    - sed -ie "s|YOUR_AWS_SECRET_ACCESS_KEY|${AWS_SECRET_ACCESS_KEY}|g" deployment.yaml
     - mkdir -p ~/.kube; cat ${KUBE_CONFIG} > /root/.kube/config
     - kubectl apply -f deployment.yaml
   only:
