--- a/deployment.yaml
+++ b/deployment.yaml
@@ -12,25 +12,36 @@ stringData:
 apiVersion: v1
 kind: Service
 metadata:
-  finalizers:
-  - service.kubernetes.io/load-balancer-cleanup
-  labels:
-    name: front-service
-    manager: kubectl-client-side-apply
-  name: front-service
+  name: front-ingress-svc
   namespace: catalogue
 spec:
-  clusterIP: 172.20.98.6
-  externalTrafficPolicy: Cluster
-  ports:
-  - nodePort: 30063
-    port: 80
-    protocol: TCP
-    targetPort: 8080
   selector:
     name: front-service
-  sessionAffinity: None
-  type: LoadBalancer
+  ports:
+    - name: http
+      port: 80
+      targetPort: 8080
+  type: ClusterIP
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: front-ingress-nginx
+  namespace: catalogue
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: front.demo.learn.nrkk.technology
+      http:
+        paths:
+          - pathType: Prefix
+            backend:
+              service:
+                name: front-ingress-svc
+                port:
+                  number: 80
+            path: /
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -102,7 +113,7 @@ spec:
             path: /health
             port: 8080
             scheme: HTTP
-          initialDelaySeconds: 180
+          initialDelaySeconds: 100
           periodSeconds: 3
           successThreshold: 1
           timeoutSeconds: 600
