--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,15 +1,5 @@
 ---
 apiVersion: v1
-kind: Secret
-metadata:
-  name: front-service-secrets
-  namespace: catalogue
-type: Opaque
-stringData:
-  AWS_ACCESS_KEY_ID: "YOUR_AWS_ACCESS_KEY_ID"
-  AWS_SECRET_ACCESS_KEY: "YOUR_AWS_SECRET_ACCESS_KEY"
----
-apiVersion: v1
 kind: Service
 metadata:
   name: front-ingress-svc
@@ -42,6 +32,16 @@ spec:
                 port:
                   number: 80
             path: /
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: front-service-secrets
+  namespace: catalogue
+type: Opaque
+stringData:
+  AWS_ACCESS_KEY_ID: "YOUR_AWS_ACCESS_KEY_ID"
+  AWS_SECRET_ACCESS_KEY: "YOUR_AWS_SECRET_ACCESS_KEY"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -90,7 +90,7 @@ spec:
         - name: QDRANT_HOST
           value: qdrant.qdrant
         - name: JVM_OPTS
-          value: "-Dcatalogue.url=http://catalogue-web -Dspring.datasource.url=jdbc:mysql://front-db:3306/db -Dspring.datasource.username=frontservice -Dspring.datasource.password=frontservice_password -Dnewrelic.config.ai_monitoring.enabled=true -Dnewrelic.config.custom_insights_events.max_samples_stored=100000 -Dnewrelic.config.span_events.max_samples_stored=10000"
+          value: "-Dcatalogue.url=http://catalogue-web-svc -Dspring.datasource.url=jdbc:mysql://front-db:3306/db -Dspring.datasource.username=frontservice -Dspring.datasource.password=frontservice_password -Dnewrelic.config.ai_monitoring.enabled=true -Dnewrelic.config.custom_insights_events.max_samples_stored=100000 -Dnewrelic.config.span_events.max_samples_stored=10000"
         - name: RAILS_LOG_TO_STDOUT
           value: "true"
         - name: RAILS_MAX_THREADS
