--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # Database??
-spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.url=jdbc:mysql://localhost:13306/db
 spring.datasource.username=frontservice
 spring.datasource.password=frontservice_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -38,4 +38,6 @@ qdrant.collection-name=socks-products
 # catalogue
 catalogue.url=https://catalogue.demo.learn.nrkk.technology
 
+# payment
+payment.url=http://localhost:8081
 server.servlet.session.cookie.secure=true
