--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.session:spring-session-jdbc'
+    implementation 'org.springframework.retry:spring-retry'
+    implementation 'org.springframework:spring-aspects'
     implementation 'org.thymeleaf:thymeleaf-spring5:3.1.2.RELEASE'
     implementation 'org.projectlombok:lombok:1.18.28'
     implementation "software.amazon.awssdk:bedrockruntime:${awsSdkVersion}"
