--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,26 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # Database??
-spring.datasource.url=jdbc:mysql://localhost:13306/db
 spring.datasource.username=frontservice
 spring.datasource.password=frontservice_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# MySQL auto-reconnect settings
+spring.datasource.url=jdbc:mysql://localhost:13306/db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+# HikariCP connection pool settings
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.leak-detection-threshold=60000
+
+# Spring Retry settings
+spring.retry.enabled=true
 
 spring.security.user.name=user
 spring.security.user.password=password
